JUnit and Mockito,GlobalExeptionHandler